--- a/src/components/mmo_0/index.css
+++ b/src/components/mmo_0/index.css
@@ -4,7 +4,7 @@
     display: inline-block;
 }
 .csdf{
-    
+    width: 100%;
     height: 100vh;
     display: inline-block; 
     overflow: scroll;
@@ -103,3 +103,7 @@
   .menu-app:hover{
     color: rgb(22, 22, 22);
   }
+  .re{
+    position: relative;
+}
+ 
