--- a/src/components/mmo_0/lib/editer/editer.css
+++ b/src/components/mmo_0/lib/editer/editer.css
@@ -12,6 +12,16 @@
 .tox-editor-header div {
     background-color: #d7d7d7 !important;
 }
+.zdas {
+    position: fixed;
+    left: 4%;
+    top: 15%;
+}
+.seemore{
+    padding: 50px;
+    text-align: center;
+    margin-bottom: 80px;
+}
 .buttonz-editer{
     padding: 9px;
     display: grid;
