--- a/src/components/mmo_0/lib/template_input/template_input.css
+++ b/src/components/mmo_0/lib/template_input/template_input.css
@@ -33,12 +33,14 @@
     left: 0px;
     font-size: 20px;
     cursor: pointer;
+    color: #a7a5a5;
 }
 .icon-x-img{
     position: absolute;
     right: 0px;
     font-size: 20px;
     cursor: pointer;
+    color: #a7a5a5;
 }
 .icon-img-muit:hover,.icon-x-img:hover{
     color: #e30505;
@@ -64,7 +66,7 @@
 }
 .btun{
     position: absolute;
-    right: 0px;
+    right: -45px;
     bottom: -23px;
 }
 .edit-content{
@@ -104,11 +106,11 @@
     top: -5px;
     right: -18px;
     cursor: pointer;
-    color: rgb(146, 39, 39);
+    color: #055e1b;
     font-size: 18px !important;
   }
   .xe:hover{
-    color: red;
+    color: green;
   }
   .ce{
     position: absolute;
@@ -130,4 +132,13 @@
     background-color: #e8e8e8;
     border-radius: 4px;
     padding: 1px 7px;
+ }
+ .icon-up{
+    position: absolute;
+    left: 0px;
+    top: 20px;
+    cursor: pointer;
+ }
+ .icon-up:hover{
+    color: rgb(14, 88, 122);
  }
