--- a/src/components/mmo_0/lib/template_input/template_input.css
+++ b/src/components/mmo_0/lib/template_input/template_input.css
@@ -124,7 +124,7 @@
     color: green;
   }
  .clorg{
-    background-color:yellowgreen !important;
+    background-color:#d5d5d5 !important;
     /* background-color:wheat !important; */
     /* background-color:#999494 !important; */
  }
