--- a/src/components/mmo_0/frontend_html/style.css
+++ b/src/components/mmo_0/frontend_html/style.css
@@ -621,6 +621,7 @@ input{
     position: absolute;
     left: 27px;
     cursor: pointer;
+    top: 17px;
 }
 .icon-cart{
     right: 11%;
@@ -668,7 +669,10 @@ input{
 .icon-headrez{
     margin-right: 5px;
     position: absolute;
-    left: -21px;
+    left: -26px;
+    top: -1px;
+    font-size: 17px;
+    transform: rotate(330deg);
 }
 .brs:hover{
     background: rgb(231 182 35) !important;
@@ -715,6 +719,9 @@ input{
     color: #ffffff !important;
     font-weight: 500;
     cursor: pointer;
+}
+.re{
+    position:relative;
 }
 .menu>ul ul>li>a{
     padding-left: 45px;
@@ -831,6 +838,11 @@ body::-webkit-scrollbar-thumb {
     }
     .logo{
         margin: unset;
+        height: 48px;
+    }
+    .logo>a{
+        position: absolute;
+        top: -9px;
     }
     .dimmer{display: none;}
 
@@ -863,22 +875,6 @@ body::-webkit-scrollbar-thumb {
     .menu-mt .menu-desktop{
         background-color: #0d5cb6;
     }
-    /* .set-menu:hover{
-        overflow: visible;
-    }
-
-    .set-menu:hover>.dimmer{
-        position: absolute;
-        width: 200vw;
-        height: 200vw;
-        display: block;
-        z-index: -1;
-        top: 50px;
-        left: -500px;
-    } 
-    .dimmer:hover{
-        display: none !important;
-    } */
     .menu>ul{
         min-height: 50px;
         height: 50px;
@@ -1029,7 +1025,7 @@ body::-webkit-scrollbar-thumb {
 }
 .ordery {
     border: none;
-    display: inline-block;
+    display: block;
     text-align: center;
     background-color: #446cb3;
     padding: 10px 16px;
@@ -1040,7 +1036,7 @@ body::-webkit-scrollbar-thumb {
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
     width: 100%;
     cursor: pointer;
-    max-width: 351px;
+    min-height: 77px;
 }
 .mh2 {
     display: block;
@@ -1065,7 +1061,7 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,.xu-huong {
     margin-top: 0;
     margin-bottom: .5rem;
     font-weight: 500;
@@ -1081,7 +1077,7 @@ h6 {
 }
 
 .h2,
-h2 {
+h2,.xu-huong {
     font-size: calc(1.325rem + .9vw)
 }
 
@@ -1153,11 +1149,12 @@ p {
     margin-bottom: 12px;
     padding: 0px;
     text-decoration: none;
+    position:relative;
 }
 .cart-w a:hover h3{
     color: #000;
 }
-.cart-w h3{
+.cart-w h3,.cart-w p{
     text-align: initial;
     font-weight: 600;
     margin-top: 5px;
@@ -1236,7 +1233,6 @@ ul.cart-w.row {
 }
 /*  */
 #footer{
-    /* background-color: burlywood; */
     position: relative;
 }
 .content-footer{
@@ -1330,7 +1326,8 @@ ul.cart-w.row {
     transition: border-radius 0.5s ease 0s;
     border-radius: 0 10px 10px 0;
     box-shadow: 0 2px 7px rgb(0 0 0 / 0%);
-    z-index: 10;
+    z-index: 999;
+    left:0px;
 }
 .ulz{
     list-style: none;
@@ -1367,6 +1364,8 @@ ul.cart-w.row {
 .ulz a{
     color: #334862;
     text-decoration: none;
+    /* margin-top: 7px; */
+    display: block;
 }
 .fixed-tool li i {
     width: 54px!important;
@@ -1403,6 +1402,13 @@ ul.cart-w.row {
     text-decoration: none;
     color: #1f5bb6 !important;
   }
+  span.icon-zalo.path1, span.icon-mess.icon-messenger {
+    font-size: 35px;
+}
+/* #lien-he-zalo-1,#lien-he-fb,#cuoc-goi-2{
+    margin-top: 7px;
+    display: block;
+} */
   .calzs{
     width: 42px;
       height: 42px;
@@ -1427,7 +1433,7 @@ ul.cart-w.row {
       -webkit-animation-iteration-count: infinite;
       cursor: pointer;
       box-shadow: 0 0 0 0 #c31d1d;
- 
+      font-size: 43px;
   }
   @keyframes devvn_zoom {
     0% {
@@ -1502,9 +1508,14 @@ ul.cart-w.row {
     padding: 6px 8px 6px 8px;
     border: 1px solid #9b9b9b;
     margin-bottom: 3px;
-    min-width: 164px;
     outline: 0;
     display: inline-block;
+    flex: 0 0 auto;
+    width: 46%;
+    margin-right: 4%;
+}
+.buy-dt{
+    padding-left: 12px;
 }
 .btnz:hover{
     background-color: white; 
@@ -1616,7 +1627,7 @@ figure figcaption {
 table{
     margin-bottom: 16px;
 }
-blockquote {
+blockquote:not(.link-dt) {
     background: #d9f1c2;
     border: 1px solid #7abf28;
     border-radius: 5px;
@@ -1626,9 +1637,6 @@ blockquote {
 blockquote>p {
     margin: 0px;
     padding: 0px;
-}
-tbody>tr:first-child >td{
-    font-weight: bold;
 }
 .contents a {
     text-decoration: none;
@@ -1645,6 +1653,7 @@ tbody>tr:first-child >td{
     .gt1{
         padding: 0px;
     }
+    
 }
 @media (min-width: 1200px){
     .h2, h2 {
@@ -1713,4 +1722,594 @@ span.star>b{
 }
 .xem-chi-tiet:hover{
     font-weight:700;
+}
+/* category menu */
+.xuhms{
+    padding: 0px 5px;
+}
+@media (min-width: 576px){
+    .xuhms{
+        padding: 0px;
+    }
+}
+.refz{
+    text-decoration-line: none;
+    display: block;
+    text-align: center;
+    border: 1px solid #dedede;
+    padding: 8px;
+    border-radius: 10px;
+    background: #fff;
+}
+.refz:hover{
+    border: 1px solid #446CB3;
+    color:#0d6efd;
+}
+.category-mn{
+    background-color: #f2f2f2;
+    padding: 5px 5px;
+    margin: 1px;
+}
+.category-mn>div{
+    margin-bottom:3px;
+}
+.refz>p{
+    height: 21px;
+    overflow: hidden;
+    line-height: 20px;
+    font-size: 15px;
+    word-wrap: break-word;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    margin-top: 8px;
+    margin-bottom: 0px;
+}
+@-webkit-keyframes shine {
+	0%, 10% {
+		background-position: -1000px;
+	}
+	20% {
+		background-position: top left;
+	}
+	90% {
+		background-position: top right;
+	}
+	100% {
+		background-position: 1000px;
+	}
+}
+/* home */
+.card-3-home{
+    padding: 4px !important;
+    background-color: white;
+}
+.lza-home {
+    padding: 4px !important;
+}
+.lza-home>a:hover p{
+    color:#009688;
+}
+h3.title-h3-1 {
+    padding-left: 40px;
+    color: #EC644B;
+}
+h3.title-h3-2 {
+    padding: 12px 46px;
+    color: #ffffff;
+    display: inline-block;
+    margin: 0px;
+    background-color: #ed644c;
+}
+.header-cate-2{
+    border-bottom: 3px solid #ed644c !important;
+}
+.icon-tt-1{
+    position: absolute;
+    top: -1px;
+    left: 6px;
+    font-size: 26px;
+}
+.icon-tt-2{
+    position: absolute;
+    top: 12px;
+    left: 11px;
+    font-size: 26px;
+}
+.xem-them{
+    position:absolute;
+    right:0px;
+    bottom:0px;
+    color:#ed644c;
+}
+.xem-them:hover{
+    color:#0d6efd;
+}
+.cart-u{
+    list-style: none;
+    padding: 0px;
+}
+.a-bv{
+    display: flex;
+    background-color: white;
+    border-radius: 5px;
+    padding: 8px;
+    text-decoration-line: none;
+}
+.a-bv:hover{
+    color:#0d6efd;
+    text-decoration-line: underline;
+}
+.bv-cart{
+    margin-bottom: 3px;
+    padding: 4px;
+}
+.a-bv>p{
+    height: 80px;
+    overflow: hidden;
+    line-height: 20px;
+    word-wrap: break-word;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+}
+/* detail */
+.bbz {
+    background-color: #dddfe2;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    max-width: 768px !important;
+}
+.pd-header {
+    padding-top: 10px;
+    max-width: 50px !important;
+}
+.header-dt{
+    background-color: #446CB3;
+    height: 60px;
+}
+.pd-header>a{
+    filter: drop-shadow(2px 4px 6px black) !important;
+    font-size: 26px;
+    display: block;
+    text-decoration: none;
+}
+.mgb-0{
+    margin-block-end: 0px;
+}
+.titlez>h1{
+    padding: 5px 0px;
+    margin: 0px;
+    word-wrap: break-word;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    -webkit-line-clamp: 1;
+    line-height: 54px;
+    font-size: 18px;
+    height: 58px;
+}
+.main-dt{
+    margin-block-end: 100px;
+    margin-left: -11px;
+    margin-right: -11px;
+
+}
+.wrapz{
+    background-color: white;
+    margin-bottom: 16px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    padding-top: 3px;
+    display: flex;
+    flex-direction: column-reverse;
+}
+.imgz{
+    max-width: 500px;
+    display: block;
+    margin: auto;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+.show-price-dt{
+    position: absolute;
+    bottom: 0px;
+    filter: drop-shadow(6px 6px 4px white);
+    text-shadow: 1px 1px #fff, -1px 1px #fff, 1px -1px #fff, -1px -1px #fff, 1px 1px 5px #555;
+    left: 3px;
+    width: 100%;
+    text-align: center;
+    opacity: 0.5;
+}
+.clor-x{
+    color: #0d6efd;
+}
+.clor-y{
+    color: #d0021b;
+    text-decoration: none;
+    font-weight: 800;
+}
+.wrap-contents{
+    padding: 8px;
+}
+.wrap-contents table {
+    margin: 8px 0px;
+}
+@media (min-width: 768px){
+    .wrap-contents{
+        padding-left: 0px;
+        padding-right: 0px;
+        width: 600px;
+        margin: auto;
+    }
+    .ulz a{
+        margin-top: 7px;
+    }
+}
+.wrap-contents>h2{
+    font-size: 17px;
+}
+.text-dt p{
+    margin: 0px;
+    font-family: auto;
+    padding-bottom: 2px;
+}
+.text-dt h2{
+    font-size: 16px;
+}
+.text-dt h3{
+    font-size: 14px;
+}
+.text-dt p::before { /* add the new bullet point */
+    display: inline-block;
+    content: '';
+    -webkit-border-radius: 0.375rem;
+    border-radius: 0.375rem;
+    height: 0.75rem;
+    width: 0.75rem;
+    margin-right: 0.5rem;
+    background-color: #bdbdbd;
+}
+.pdr-3{
+    padding-right: 5px;
+}
+.pdl-3{
+    padding-left: 5px;
+}
+.lhzl{
+    display: block;
+    text-align: center;
+    background-color: #efdd3c;
+    padding: 10px 16px;
+    border-radius: 7px;
+    margin-top: 8px;
+    text-decoration: none;
+    color: #910834;
+    box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+.lhzl:hover{
+    background-color: #f5e555;
+}
+.lh1{
+    display: block;
+    font-size: 19px;
+    font-weight: 700;
+    margin-bottom: 3px;
+}
+.bgr-dt{
+    background-color: #e2e1e0;
+}
+.divz {
+    width: 100%;
+    border-bottom: 1px solid lightgrey;
+    margin: auto;
+    margin-top: 8px;
+}
+/* .card-3:hover .icon-carty{
+    color: #03A9F4;
+} */
+.icon-carty{
+    color: #9E9E9E;
+    font-weight: 900 !important;
+}
+.orderz{
+    --bs-gutter-x: 0px;
+}
+span.xuhms.xu-huong {
+    padding: 9px 16px;
+    display: block;
+    margin: 0px;
+}
+.link-dt{
+    color: #a7a7a7;
+    margin: 9px;
+}
+.link-dt>p{
+    word-wrap: break-word;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    -webkit-line-clamp: 1;
+    font-size: 13px;
+    height: 18px;
+}
+.link-dt a{
+    color: #0d6efd;
+    font-weight: 700;
+}
+.st-pd-table {
+    border-collapse: collapse;
+    width: 100%;
+}
+.st-pd-table tr:nth-child(odd) {
+    background-color: #f3f4f7;
+}
+.st-pd-table td:first-child {
+    width: 128px;
+}
+.st-pd-table td {
+    border: 1px solid #dee2e6;
+    padding: 5px 10px;
+    font-weight: 400;
+}
+.like>span,.comment>span{
+    display: block;
+    text-align: center;
+    padding: 5px 5px;
+    border: 1px solid #9b9999;
+    margin: 4px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-family: initial;
+    margin-top: 12px;
+    position: relative;
+    min-height: 39px;
+}
+.comment>span{
+    margin-top: 6px;
+}
+.like>span:hover,.comment>span:hover{
+    background-color: #e5e5e5;
+}
+.like>span>i,.comment>span>i{
+    font-size: 22px;
+    margin-right: 6px;
+}
+.dis-none{
+    display: none;
+}
+.anime {
+    display: block !important;
+    box-sizing: border-box;
+    font-family: 'Trebuchet MS', sans-serif;
+    background: #E91E63;
+    border-radius: 50%;
+    color: #fff;
+    font-weight: bold;
+    font-size: 10px;
+    height: 18px;
+    line-height: 1.55em;
+    top: -6px;
+    left: -8px;
+    border: 2px solid #fff;
+    position: absolute;
+    text-align: center;
+    width: 18px;
+    box-shadow: 1px 1px 5px rgba(0,0,0, .2);
+    animation: pulse 1.5s infinite;
+  }
+  .anime:after {
+    content: '';
+    position: absolute;
+    top:-2px;
+    left:-2px;
+    border:2px solid rgba(0,155,243,.5);
+    opacity:0;
+    border-radius: 50%;
+    width:100%;
+    height:100%;
+    animation: sonar 1.5s 1;
+  }
+  @keyframes sonar { 
+    0% {transform: scale(.9); opacity:1;}
+    100% {transform: scale(2);opacity: 0;}
+  }
+  @keyframes pulse {
+    0% {transform: scale(1);}
+    20% {transform: scale(1.4); } 
+    50% {transform: scale(.9);} 
+    80% {transform: scale(1.2);} 
+    100% {transform: scale(1);}
+  }
+  .text-dt {
+    overflow: hidden;
+}
+.checkout>button {
+    display: block;
+    width: 100%;
+    cursor: pointer;
+    margin-top: 13px;
+    padding: 9px 10px;
+}
+.add-cart{
+    margin-bottom: 10px;
+    color: #fff;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    background-color: #ff9826;
+    touch-action: manipulation;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    border-radius: 4px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -ms-touch-action: manipulation;
+    user-select: none;
+}
+.buy-now{
+    background-color: #446cb3;
+}
+.add-cart>span,.buy-dt>span{
+    font-size: 16px;
+    display: block;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+.buy-dt>div{
+    padding: 0px;
+}
+.hv:hover {
+    background-color: darkgray !important;
+}
+.mouse-pointer {
+    cursor: pointer;
+}
+.thanh-toan:hover {
+    background-color: #ec644b !important;
+}
+.heading{
+    padding-left: 12px;
+}
+.comment {
+    font-family: "Roboto", sans-serif;
+    padding-left: 12px;
+    padding: 5px;
+}
+.w1 {
+    margin-top: 10px;
+    position: relative;
+    font-size: 14px;
+    color: #333;
+    width: inherit;
+    padding: 8px;
+    border: 1px solid #e1e4e6;
+    border-radius: 4px;
+    background: #f8f9fa;
+}
+.w1>i {
+    font-size: 12px;
+    margin-left: 3px;
+    color: #52b858;
+    font-weight: 600;
+}
+.w1>p {
+    padding: 0px 8px;
+    font-size: 15px;
+    margin: 3px 0px;
+    font-family: none;
+}
+.dev-3 {
+    flex: 0 0 auto;
+    width: 33.3333%;
+}
+.wrapz-bl{
+    background-color: white;
+    margin-bottom: 16px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    padding-top: 3px;
+}
+.rep {
+    font-size: 13px;
+    color: #288ad6;
+    cursor: pointer;
+}
+.w2 {
+    background: #8bc34a;
+    margin-left: 10px;
+}
+/* .w1 {
+    margin-top: 10px;
+    position: relative;
+    border: 1px solid #e7e7e7;
+    padding: 15px 10px;
+    font-size: 14px;
+    color: #333;
+    width: inherit;
+} */
+.blxx{
+    padding: 0px 12px;
+    text-align: right;
+}
+.vietBinhLuan {
+    cursor: pointer;
+    text-decoration: underline;
+    margin-top: 5px;
+    color: #2196f3;
+}
+.wrap-vbl{
+    min-height: 32px;
+    padding-right: 12px;
+    margin-bottom: 12px;
+}
+.wpc{
+    padding: 10px;
+    background-color: #ffffff;
+    padding-top: 24px;
+}
+.write-cm{
+    margin-top: 5px;
+    margin-bottom: 10px;
+    background-color: #d3d3d3;
+    position: relative;
+}
+.text-cm {
+    border: 1px solid #ddd;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    padding: 5px;
+    resize: none;
+    outline: none;
+    display: block;
+    width: 100%;
+    margin: 0;
+    border-radius: 6px;
+    font-size: 14px;
+}
+.dot {
+    border: 1px solid #ddd;
+    width: 100%;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    padding: 5px;
+    height: 35px;
+    outline: none;
+    margin-top: 6px;
+    font-size: 12px;
+}
+.sendbl {
+    padding: 5px 10px;
+    display: block;
+    margin: auto;
+    margin-top: 5px;
+    cursor: pointer;
+}
+.canlex{
+    text-align: right;
+    cursor: pointer;
+}
+.canlex>span:hover{
+    color: rgb(167, 25, 25);
+    text-decoration: underline;
+}
+.icon-thumbs-o-up,.icon-ms{
+    /* font-size: 20px;
+    margin-right: 6px;
+    font-weight: 900;
+    color: black; */
+}
+.luna{
+
 }
