--- a/src/components/mmo_0/lib/template_input/template_input.css
+++ b/src/components/mmo_0/lib/template_input/template_input.css
@@ -9,7 +9,7 @@
     height: 100% !important;
     /* background-color: bisque !important; */
 }
-.buzz {
+/* .buzz {
     border: 1px solid #169cd9;
     border-radius: 5px!important;
     color: #169cd9;
@@ -18,7 +18,7 @@
 }
 .buzz:hover {
     background-color: #f3e9e9;
-}
+} */
 .input-1{
     width: 100%;
 }
