--- a/src/components/mmo_0/frontend_html/detail.html
+++ b/src/components/mmo_0/frontend_html/detail.html
@@ -51,8 +51,52 @@
             <main class="main-dt">
                 <section class="wrapz">
                     <div class="wrap-contents">
+                        <h2>Thông số kĩ thuật</h2>
+                        <div class="text-dt">
+                            <table class="st-pd-table">
+                                <tbody>
+                                    <tr>
+                                        <td>Màn hình</td>
+                                        <td>13.3 inch, 2560 x 1600 Pixels, IPS, IPS LCD LED Backlit, True Tone</td>
+                                    </tr>
+                                    <tr>
+                                        <td>CPU</td>
+                                        <td>Apple, M1</td>
+                                    </tr>
+                                    <tr>
+                                        <td>RAM</td>
+                                        <td>8 GB, LPDDR4</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Ổ cứng</td>
+                                        <td>SSD 256 GB</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Đồ họa</td>
+                                        <td>Apple M1 GPU 7 nhân</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Trọng lượng</td>
+                                        <td>1.29 kg</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Kích thước</td>
+                                        <td>304.1 x 212.4 x 4.1 ~ 16.1 mm</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Xuất xứ</td>
+                                        <td>Trung Quốc</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Năm ra mắt</td>
+                                        <td>2020</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <!-- thêm bảng giá ở đây nhưng cho ẩn đi -->
+                        </div>
                         <div class="buy-dt row">
-                            <div>Chọn loại sản phẩm :</div>
+                            <div>Chọn sản phẩm :</div>
                             <button id="kt_1_1" class="btnz "
                                 onclick="set_kt({'kt':'ngang 80cm x 2m','g_og':1150000,'g_sale':1150000},'1','1')">ngang
                                 80cm x 2m <span class="showpz">giá: <b>1.150.000₫</b></span>
@@ -104,50 +148,6 @@
                                 <span class="showpz">Mua ngay</span>
                                 <small>Giao Hàng Tận Nơi Trên Toàn Quốc</small>
                             </button>
-                        </div>
-                        <h2>Thông số kĩ thuật</h2>
-                        <div class="text-dt">
-                            <table class="st-pd-table">
-                                <tbody>
-                                    <tr>
-                                        <td>Màn hình</td>
-                                        <td>13.3 inch, 2560 x 1600 Pixels, IPS, IPS LCD LED Backlit, True Tone</td>
-                                    </tr>
-                                    <tr>
-                                        <td>CPU</td>
-                                        <td>Apple, M1</td>
-                                    </tr>
-                                    <tr>
-                                        <td>RAM</td>
-                                        <td>8 GB, LPDDR4</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Ổ cứng</td>
-                                        <td>SSD 256 GB</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Đồ họa</td>
-                                        <td>Apple M1 GPU 7 nhân</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Trọng lượng</td>
-                                        <td>1.29 kg</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Kích thước</td>
-                                        <td>304.1 x 212.4 x 4.1 ~ 16.1 mm</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Xuất xứ</td>
-                                        <td>Trung Quốc</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Năm ra mắt</td>
-                                        <td>2020</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                            <!-- thêm bảng giá ở đây nhưng cho ẩn đi -->
                         </div>
                         <blockquote class="link-dt">
                             <p>Sản phẩm liên quang <strong>Giường sắt</strong>: <a href="#" target="_blank">Giường sắt
