--- a/src/components/mmo_0/frontend_html/detail.html
+++ b/src/components/mmo_0/frontend_html/detail.html
@@ -207,7 +207,7 @@
                                     rẻ</a></p>
                         </blockquote>
                         <div class="divz"></div>
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="col-6 like">
                                 <span>
                                     <i class="icon-thumbs-o-up"></i>
@@ -221,7 +221,7 @@
                                 </span>
                             </div>
                         </div>
-                        <div class="divz"></div>
+                        <div class="divz"></div> -->
                     </div>
                     <div class="imgz re">
                         <img class="zz"
