--- a/src/components/mmo_0/frontend_html/category.html
+++ b/src/components/mmo_0/frontend_html/category.html
@@ -29,7 +29,7 @@
     
     <script defer="defer"
         src="https://anbinhnew.com/wp-content/plugins/qc_landingpage/frontend/src/lazyload.js"></script>
-    <link href="./style.css" rel="stylesheet">
+    <link href="./style-comom.css" rel="stylesheet">
     <link href="./icon/style.css" rel="stylesheet">
 </head>
 
@@ -105,7 +105,7 @@
                     <div id="set-menu" class="set-menu hide-menu">
                         <div class="menu">
                             <ul>
-                                <li class="menu-desktop"  onclick="toggle_menu_destop()"><span class="icon-menumb" style="font-size:27px;"></span></li>
+                                <li class="menu-desktop"  onclick="toggle_menu_destop()"><span class="icon-menumb" style="font-size: 27px; display: inline-block; width: 28px;"></span></li>
                                 <li><a href="https://anbinhnew.com/shop/giuong-sat/" title="Giường sắt, 74 mẫu Giường Sắt Đẹp nhất, Giảm giá tới 40%">Trang Chủ</a> </li>
                                 <li><a onclick="hide_menu()" href="#giuong-sat-gia-re" title="Giường sắt giá rẻ">Giường
                                         sắt giá rẻ</a></li>
