--- a/src/components/mmo_0/frontend_html/detail.html
+++ b/src/components/mmo_0/frontend_html/detail.html
@@ -29,7 +29,7 @@
 
     <script defer="defer"
         src="https://anbinhnew.com/wp-content/plugins/qc_landingpage/frontend/src/lazyload.js"></script>
-    <link href="./style.css" rel="stylesheet">
+    <link href="./style-old.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link href="./icon/style.css" rel="stylesheet">
 </head>
